# entraid_auth

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  HYBRID-DEPLOYMENT.md  README.md  containerapp-clean.yaml  containerapp-inline-rust.yaml  containerapp-rust-fixed.yaml  containerapp-rust-pure.yaml  deploy.sh  package.json  run-local.sh  run.sh  server.js  startup.sh  web.config
.github/workflows/: azure-deploy.yml
auth-service/: package.json  server.js  web.config
clean-deploy/: .deployment  server.js
deploy/: package.json  server.js
simple-app/: package.json
src/: main.rs
