[package]
name = "login-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.9", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
url = "2.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
