[package]
name = "primegate-auth-portal"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.9", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
base64 = "0.22"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
actix-web-httpauth = "0.8"
